--- a/slack/less/app_container.less
+++ b/slack/less/app_container.less
@@ -2,12 +2,15 @@ div.main {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #80E65E;
+    padding-top: 22px;
 
     h1 {
         text-align: center;
+        color: #dd0000;
         font-family: 'SF Sports Night';
         cursor: default;
+        margin: 0;
+        margin-top: 10px;
     }
 
     sup {
