--- a/slack/less/note.less
+++ b/slack/less/note.less
@@ -1,13 +1,16 @@
 input.note {
     display: block;
-    width: 100%;
+    width: 80%;
+    margin: auto;
     margin-top: 10px;
-    border: 1px solid #000000;
-    border-width: 1px 0;
+    border: 0px solid #000000;
+    // border-width: 1px 0;
     height: 40px;
     font-size: 18px;
     padding: 0 20px;
-    background-color: inherit;
+    background-color: #ffffff;
     outline: none;
     -webkit-app-region: no-drag;
+    box-shadow: inset 0px 5px 20px -10px #000000;
 }
+
