--- a/slack/less/send.less
+++ b/slack/less/send.less
@@ -1,17 +1,24 @@
 button.send {
     font-family: 'SF Sports Night';
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: auto;
+    margin-top: 12px;
     font-size: 24px;
-    background-color: inherit;
-    border: 1px solid #000000;
-    border-width: 1px 0 0 0;
+    background-color: #dd0000;
     outline: none;
-    position: absolute;
-    bottom: 0;
     height: 40px;
-    padding: 13px;
+    padding: 10px 20px;
     cursor: default;
     -webkit-app-region: no-drag;
+    display: block;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px -5px #000000;
+    color: #ffffff;
+    border: none;
+}
+
+button.send:active {
+    position: relative;
+    top: 1px;
+    left: 1px;
+    box-shadow: 1px 1px 10px -5px #000000;
 }
